@@ -19,6 +19,8 @@ cdrom-detect (0.41) UNRELEASED; urgency=low
     - Updated Lithuanian translation (lt.po).
   * Alwin Meschede
     - Updated German translation (de.po)
+  * Marco d'Itri
+    - Add preliminary support for .ko kernel modules.
 
  -- Martin Sjogren <sjogren@debian.org>  Sun, 14 Dec 2003 21:21:07 +0100
 
